security manager example